--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "google-auth-library": "^9.15.1",
     "mongoose": "^8.1.1",
     "nodemon": "^3.1.10"
   }
